# bigfiles

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bigfiles/: __init__.py  cli.py  filters.py  finder.py  formatters.py  notifier.py  tui.py
